--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "ts-node src/main.ts"
+    "start": "ts-node src/main.ts"
   },
   "dependencies": {
     "@types/node": "^18.16.3",
