--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "nft.storage": "^7.0.3",
+    "pino": "^8.12.1",
+    "pino-pretty": "^10.0.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
