--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.16.3",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
+    "files-from-path": "^1.0.0",
     "nft.storage": "^7.0.3",
     "pino": "^8.12.1",
     "pino-pretty": "^10.0.0",
